<resources>
    <string name="app_name">Plans Nearby</string>
    <string name="facebook_application_id">545613042230072</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_events">EventsActivity</string>
    <string name="search_hint">Search here</string>
    <string name="facebook_app_id">545613042230072</string>
    <string name="details_directions">Directions</string>
    <string name="details_share">Share</string>
    <string name="details_interested">Interested</string>
    <string name="details_tickets">Tickets</string>
    <string name="nearby_button">Find Around Me</string>
    <string name="tab_one_title">FOR ME</string>
    <string name="tab_events_title">EVENTS</string>
    <string name="tab_near_me_title">NEAR ME</string>
    <string name="search_text">"Searching for "</string>
    <string name="api_fail_toast">" Error finding events"</string>
    <string name="location_unavailable">Location not available</string>
    <string name="connection_unavailable">connection not available</string>
    <string name="dialog_enter_city">ENTER CITY</string>
    <string name="event_when">"When: "</string>
    <string name="event_api_failed">Event API call failed</string>
    <string name="event_address_text">"Address: "</string>
    <string name="add_event_calendar">Add Event to calendar</string>
    <string name="event_price_free">Free</string>
    <string name="tab_food_title">FOOD</string>
    <string name="tab_drinks_title">DRINKS</string>
    <string name="tab_top_picks_title">TOP PICKS</string>
    <string name="tab_sights_title">SIGHTS</string>
    <string name="nav_title_about">About</string>
    <string name="nav_events_this_weekend_title">Events This Weekend</string>
    <string name="nav_coffee_title">Coffee</string>
    <string name="nav_trending_title">Trending</string>
    <string name="nav_login_with_facebook_title">Login With Facebook</string>
    <string name="nav_my_saved_places_title">My Saved Places</string>
    <string name="nav_my_interests_title">My Interests</string>
    <string name="failed_venue_callback_toast">Problem fetching venues</string>
    <string name="venues_no_results_toast">Sorry, there are no venues available</string>
    <string name="main_no_saved_venues_toast">You don\'t have any saved venues yet</string>
    <string name="location_permission_rationale_toast">Location required to show you the best events and places</string>
    <string name="permission_granted_toast">Permission granted</string>
    <string name="permission_denied_tost">Oops you just denied the permission</string>
    <string name="details_calendar_permission_toast">You need to grant calendar permission to add event</string>
    <string name="venues_details_tips">Tips and Reviews</string>
    <string name="venue_details_failed_api_toast">failed to retrieve event details</string>
    <string name="venue_details_removed_venue_toast">Venue removed from favorites</string>
    <string name="venue_details_added_venue_favs">Venue added to favorites</string>
    <string name="city_dialog_submit_text">submit</string>
    <string name="city_dialog_cancel_text">CANCEL</string>
    <string name="venue_details_more_info">More Info</string>
    <string name="nav_more_categories">More Categories</string>
    <string name="about_app_description">This application helps you find things to do and places to go in your area. If you like this app please rate it in the Playstore. If you have any suggestions for improvements let me know at </string>
    <string name="dev_email">bArroyoDev@gmail.com</string>
    <string name="about_plans_nearby_title">About Plans Nearby</string>
    <string name="about_app_build_info_title">Build Info</string>
    <string name="about_app_version_text">Version 1.0</string>
    <string name="about_app_powered_by_eventbrite">Powered by Eventbrite</string>
    <string name="about_app_powered_by">Powered by </string>
    <string name="frag_weekend_title">Weekend Events</string>
    <string name="snackbar_text">Turn location on for local events, or view events by city.</string>
    <string name="about_app_location_icon_text">Displayed when viewing venues and events by current location. Pressing this icon launches a dialog and asks for a city.</string>
    <string name="about_app_search_text">Search current location for categories or specific events by title.  Currently only able to search events in nearby mode.</string>
    <string name="snack_bar_action_text_city">"SELECT CITY "</string>
    <string name="about_app_how_to">How To</string>
    <string name="about_app_city_icon_text">Displayed when viewing events and venues by city. Press to go back to nearby events. Long press to search another city.</string>
    <string name="no_venues_available">No venues available at this time</string>
    <string name="no_events_available">No events available at this time</string>
    <string name="menu_search_title">Search</string>
    <string name="menu_nearby_title">Nearby</string>
</resources>
