<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_interests"
            android:icon="@android:drawable/btn_star_big_off"
            android:title="@string/nav_my_interests_title" />
        <item
            android:id="@+id/nav_saved_places"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_my_saved_places_title" />
        <item
            android:id="@+id/nav_facebook_login"
            android:icon="@drawable/com_facebook_button_icon_white"
            android:title="@string/nav_login_with_facebook_title" />
    </group>
        <item android:title="@string/nav_more_categories">
        <menu>
            <item
                android:id="@+id/nav_trending"
                android:icon="@drawable/trending_up"
                android:title="@string/nav_trending_title" />
            <item
                android:id="@+id/nav_coffee"
                android:icon="@drawable/coffee"
                android:title="@string/nav_coffee_title" />
            <item
                android:id="@+id/nav_weekend"
                android:icon="@drawable/calendar"
                android:title="@string/nav_events_this_weekend_title" />
        </menu>
    </item>

    <item android:title="About">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/nav_title_about" />
        </menu>
    </item>

</menu>
