<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".Activities.DetailsActivity">


        <ImageView
            android:id="@+id/activity_details_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:elevation="4dp"
            android:padding="4dp"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/activity_details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/activity_details_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/activity_details_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="16dp">

            <Button
                android:id="@+id/activity_details_interested_bttn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_interested" />

            <Button
                android:id="@+id/activity_details_share_bttn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_share" />

            <Button
                android:id="@+id/activity_details_directions_bttn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_directions" />


        </LinearLayout>

        <Button
            android:id="@+id/activity_details_tickets_bttn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/details_tickets" />

        <TextView
            android:id="@+id/activity_details_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:src="@android:drawable/ic_menu_my_calendar" />


    </LinearLayout>
</ScrollView>