<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdgeLength="0dp"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    tools:context=".Activities.EventDetailsActivity">


    <ImageView
        android:id="@+id/activity_details_venue_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:elevation="4dp"
        android:scaleType="fitXY" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/activity_details_venue_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/activity_details_venue_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/activity_details_venue_title"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/activity_details_venue_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/activity_details_venue_category"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/activity_details_venue_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/activity_details_venue_address"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/green" />

            <ImageView
                android:id="@+id/activity_details_venue_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_details_venue_title"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="16dp"
                android:scaleX="2"
                android:scaleY="2"
                android:src="@android:drawable/ic_menu_more" />

            <TextView
                android:id="@+id/activity_details_venue_more_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/activity_details_venue_url"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/venue_details_more_info" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp">

            <ImageView
                android:id="@+id/activity_details_venue_interested_bttn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:src="@drawable/ic_bookmark_black_48dp"
                android:text="@string/details_interested"
                android:tint="@color/colorPrimary"/>

            <ImageView
                android:id="@+id/activity_details_venue_share_bttn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:src="@drawable/ic_share_black_48dp"
                android:text="@string/details_share"
                android:tint="@color/colorPrimary"/>

            <ImageView
                android:id="@+id/activity_details_venue_directions_bttn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:elevation="4dp"
                android:src="@drawable/ic_directions_black_48dp"
                android:text="@string/details_directions"
                android:tint="@color/colorPrimary"/>


        </LinearLayout>

        <TextView
            android:id="@+id/activity_venue_details_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <com.arroyo.b.plansnearby.Activities.CustomListView
            android:id="@+id/tips_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="end"
            android:src="@drawable/poweredby_foursquare"/>


    </LinearLayout>
</LinearLayout>

</ScrollView>